[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
resstock = ["*.py"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[project]
name = "resstock"
version = "0.0.0"
description = "EIA Form data accessor"
authors = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
readme = "README.md"
requires-python = ">= 3.11"
keywords = ["github","python","EIA","Form"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]
dynamic=["dependencies"]

[project.urls]
Homepage = "https://github.com/eudoxys/resstock"
Documentation = "https://www.eudoxys.com/resstock"
Repository = "https://github.com/eudoxys/resstock.git"
Issues = "https://github.com/eudoxys/resstock/issues"

[project.scripts]
resstock = "resstock.cli:main"
