[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
loads = ["*.py"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[project]
name = "loads"
version = "0.0.0"
description = "US electric load model"
authors = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
maintainers = [
    {name = "David P. Chassin <dchassin@eudoxys.com>"},
    ]
readme = "README.md"
requires-python = ">= 3.11"
keywords = ["github","python","US","electricity","load","demand","model"]
license = {text="MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    ]
dynamic=["dependencies"]

[project.urls]
Homepage = "https://github.com/eudoxys/loads"
Documentation = "https://www.eudoxys.com/loads"
Repository = "https://github.com/eudoxys/loads.git"
Issues = "https://github.com/eudoxys/loads/issues"

[project.scripts]
loads = "loads.cli:main"
